force-app/main/default/objects/Roster_Ingest_Complete__e/Roster_Ingest_Complete__e.object-meta.xml
<CustomObject>
    <label>Roster Ingest Complete</label>
    <pluralLabel>Roster Ingest Completes</pluralLabel>
    <description>Fired by RosterAuditService when DPE ingestion job completes. Consumed by Agentforce to resume conversation and render UI-2.</description>
</CustomObject>