force-app/main/default/objects/Roster_Ingest_Complete__e/fields/Audit_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Audit_Log_Id__c</fullName>
    <label>Audit Log ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>