force-app/main/default/objects/Roster_Ingest_Complete__e/fields/CRF_Id__c.field-meta.xml
<CustomField>
    <fullName>CRF_Id__c</fullName>
    <label>CRF ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>